--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="">CONTACT US</a></li>
     </ul>
     </nav>
-    <header><div class="header-des"><img src="logo.png" alt=""><img src="bbb-logo.png" alt=""></div></header>
+    <header><h1><span>Exclusively</span><br/>Kitchens & Bathrooms</h1><p>Your Partner for Stunning Home Renovations</p><a href="">Get Started</a></header>
     <script src="script.js"></script>
 </body>
 </html>
