--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <div class="catch">Get your free estimate today!</div>
     <nav>
         <div class="estimate"><a href="">FREE ESTIMATE</a></div>
-        <button id="menu">MENU</button>
+        <button class="menu">MENU</button>
         <ul id="nav-items">
+        <li><button class="menu">CLOSE</button></li>
         <li><a href="">HOME</a></li>
         <li><a href="">ABOUT US</a></li>
         <li><a href="">SERVICES</a></li>
@@ -22,6 +23,15 @@
     </ul>
     </nav>
     <header><h1><span>Exclusively</span><br/>Kitchens & Bathrooms</h1><p>Your Partner for Stunning Home Renovations</p><a href="">Get Started</a></header>
-    <script src="script.js"></script>
+    <section class="about">
+        <div class="cards">
+            <div class="card"><iconify-icon icon="solar:buildings-2-line-duotone"></iconify-icon><h2>Meticulous Craftsmanship</h2><p>Our team's meticulous craftsmanship ensures flawless results in every project, down to the finest detail.</p></div>
+            <div class="card"><iconify-icon icon="ph:sparkle-duotone"></iconify-icon><h2>Inspired Design Concepts</h2><p>Description: Our passion lies in creating inspired design concepts that breathe new life into your space, making it truly exceptional.</p></div>
+            <div class="card"><iconify-icon icon="solar:wallet-money-line-duotone"></iconify-icon><h2>Economical yet Exceptional</h2><p>Description: We provide budget-conscious solutions that don't compromise on excellence, giving you the best value for your investment.</p></div>
+        </div>
+            
+    </section>
+        <script src="script.js"></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.8/iconify-icon.min.js"></script>
 </body>
 </html>
