--- a/index.html
+++ b/index.html
@@ -25,12 +25,41 @@
     <header><h1><span>Exclusively</span><br/>Kitchens & Bathrooms</h1><p>Your Partner for Stunning Home Renovations</p><a href="">Get Started</a></header>
     <section class="about">
         <div class="cards">
-            <div class="card"><iconify-icon icon="solar:buildings-2-line-duotone"></iconify-icon><h2>Meticulous Craftsmanship</h2><p>Our team's meticulous craftsmanship ensures flawless results in every project, down to the finest detail.</p></div>
-            <div class="card"><iconify-icon icon="ph:sparkle-duotone"></iconify-icon><h2>Inspired Design Concepts</h2><p>Description: Our passion lies in creating inspired design concepts that breathe new life into your space, making it truly exceptional.</p></div>
-            <div class="card"><iconify-icon icon="solar:wallet-money-line-duotone"></iconify-icon><h2>Economical yet Exceptional</h2><p>Description: We provide budget-conscious solutions that don't compromise on excellence, giving you the best value for your investment.</p></div>
+            <div class="card"><iconify-icon icon="solar:buildings-2-line-duotone"></iconify-icon>
+                <h2>Craftsmanship</h2>
+                <p>Our team's meticulous craftsmanship ensures flawless results in every project, down to the finest detail.</p>
+            </div>
+            <div class="card"><iconify-icon icon="ph:sparkle-duotone"></iconify-icon>
+                <h2>Design</h2>
+                <p>Our passion lies in creating inspired design concepts that breathe new life into your space, making it truly exceptional.</p>
+            </div>
+            <div class="card"><iconify-icon icon="solar:wallet-money-line-duotone"></iconify-icon>
+                <h2>Economical</h2>
+                <p>We provide budget-conscious solutions that don't compromise on excellence, giving you the best value for your investment.</p>
+            </div>
         </div>
-            
     </section>
+<main><div class="bio"><h3>A Little About Us</h3><p>With over 25 years of unwavering commitment to excellence, Exclusively Kitchens and Bathrooms has been the go-to choice for creating stunning kitchen and bathroom spaces. Since our inception in [Year of Establishment], we've mastered the art of blending craftsmanship, quality, and customer satisfaction.</p>
+<p>Our dedicated team of designers, craftsmen, and project managers collaborates to bring your dreams to life, tailored to your unique needs and budget. We prioritize top-quality materials and maintain a transparent process from concept to completion, ensuring your satisfaction at every stage.</p>
+<p>Explore our diverse portfolio, featuring modern kitchens and luxurious bathrooms that combine beauty and functionality. Partner with us to make your space exclusively yours. Contact Exclusively Kitchens and Bathrooms today to embark on your home transformation journey.</p>
+    </div>
+    <div class="certifications">
+        <img src="logo.png" alt="">
+        <img src="bbb-logo.png" alt="">
+        <img src="bonded.png" alt="">
+    </div>
+</main>
+    <footer><div class="footer-top">
+        <div class="hours"><p>Hours</p><ul><li>Monday - Saturday : 8:00 am - 8:00 pm</li><li>Sunday : CLOSED</li></ul></div>
+    <div class="footer-icons">
+        <a href=""><iconify-icon icon="mdi:facebook"></iconify-icon></a>
+        <a href=""><iconify-icon icon="mdi:instagram"></iconify-icon></a>
+        <a href=""><iconify-icon icon="mdi:google-maps"></iconify-icon></a>
+        <a href=""><iconify-icon icon="mdi:email"></iconify-icon></a>
+        <a href=""><iconify-icon icon="mdi:phone"></iconify-icon></a>
+    </div></div>
+    <div class="footer-footer"><p>@Copyright. All Rights Reserved</p><p>Privacy Policy</p></div>
+    </footer>
         <script src="script.js"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.8/iconify-icon.min.js"></script>
 </body>
