--- a/index.html
+++ b/index.html
@@ -39,27 +39,74 @@
             </div>
         </div>
     </section>
-<main><div class="bio"><h3>A Little About Us</h3><p>With over 25 years of unwavering commitment to excellence, Exclusively Kitchens and Bathrooms has been the go-to choice for creating stunning kitchen and bathroom spaces. Since our inception in [Year of Establishment], we've mastered the art of blending craftsmanship, quality, and customer satisfaction.</p>
-<p>Our dedicated team of designers, craftsmen, and project managers collaborates to bring your dreams to life, tailored to your unique needs and budget. We prioritize top-quality materials and maintain a transparent process from concept to completion, ensuring your satisfaction at every stage.</p>
-<p>Explore our diverse portfolio, featuring modern kitchens and luxurious bathrooms that combine beauty and functionality. Partner with us to make your space exclusively yours. Contact Exclusively Kitchens and Bathrooms today to embark on your home transformation journey.</p>
-    </div>
-    <div class="certifications">
-        <img src="logo.png" alt="">
-        <img src="bbb-logo.png" alt="">
-        <img src="bonded.png" alt="">
-    </div>
-</main>
-    <footer><div class="footer-top">
-        <div class="hours"><p>Hours</p><ul><li>Monday - Saturday : 8:00 am - 8:00 pm</li><li>Sunday : CLOSED</li></ul></div>
-    <div class="footer-icons">
-        <a href=""><iconify-icon icon="mdi:facebook"></iconify-icon></a>
-        <a href=""><iconify-icon icon="mdi:instagram"></iconify-icon></a>
-        <a href=""><iconify-icon icon="mdi:google-maps"></iconify-icon></a>
-        <a href=""><iconify-icon icon="mdi:email"></iconify-icon></a>
-        <a href=""><iconify-icon icon="mdi:phone"></iconify-icon></a>
-    </div></div>
-    <div class="footer-footer"><p>@Copyright. All Rights Reserved</p><p>Privacy Policy</p></div>
-    </footer>
+    <main>
+        <div class="bio">
+           <h3>A Little About Us</h3>
+           <p>With over 25 years of unwavering commitment to excellence, Exclusively Kitchens and Bathrooms has been the go-to choice for creating stunning kitchen and bathroom spaces. Since our inception in [Year of Establishment], we've mastered the art of blending craftsmanship, quality, and customer satisfaction.</p>
+           <p>Our dedicated team of designers, craftsmen, and project managers collaborates to bring your dreams to life, tailored to your unique needs and budget. We prioritize top-quality materials and maintain a transparent process from concept to completion, ensuring your satisfaction at every stage.</p>
+           <p>Explore our diverse portfolio, featuring modern kitchens and luxurious bathrooms that combine beauty and functionality. Partner with us to make your space exclusively yours. Contact Exclusively Kitchens and Bathrooms today to embark on your home transformation journey.</p>
+        </div>
+        <div class="certifications">
+           <img src="logo.png" alt="">
+           <img src="bbb-logo.png" alt="">
+           <img src="bonded.png" alt="">
+        </div>
+     </main>
+     <section class="services">
+        <h4>Services</h4>
+        <p>Explore our diverse range of comprehensive services tailored to elevate your home.</p>
+        <div class="service-boxes"><a href=""><p>Additions</p><p class="service-des">Expand your home seamlessly with our addition services, ensuring a harmonious blend with your existing architecture.</p></a><a href="">
+         <p>PAINT</p>
+         <p class="service-des">Transform your home with our professional painting services: adding color, personality, and
+            elegance to your living
+            spaces.</p>
+      </a><a href="">
+         <p>Kitchen Remodeling</p>
+         <p class="service-des">Elevate your kitchen with our expert remodeling services, tailored to your unique style and needs.</p>
+      </a><a href="">
+         <p>Bathroom Remodeling</p>
+         <p class="service-des">Experience the ultimate in bathroom transformation with our remodeling expertise, enhancing both aesthetics and
+         functionality.</p>
+      </a><a href="">
+         <p>Remodeling & Renovations</p>
+         <p class="service-des">Discover the art of home remodeling and renovations, where we breathe new life into your living spaces.</p>
+      </a><a href="">
+         <p>Flooring</p>
+         <p class="service-des">Step onto beautiful and durable flooring options, adding warmth and elegance to your home interior.</p>
+      </a></div>
+     </section>
+     <footer>
+     <div class="footer-top">
+        <div class="hours">
+           <p>Hours</p>
+           <ul>
+              <li>Monday - Saturday : 8:00 am - 8:00 pm</li>
+              <li>Sunday : CLOSED</li>
+           </ul>
+        </div>
+        <div class="footer-icons">
+           <a href="">
+              <iconify-icon icon="mdi:facebook"></iconify-icon>
+           </a>
+           <a href="">
+              <iconify-icon icon="mdi:instagram"></iconify-icon>
+           </a>
+           <a href="">
+              <iconify-icon icon="mdi:google-maps"></iconify-icon>
+           </a>
+           <a href="">
+              <iconify-icon icon="mdi:email"></iconify-icon>
+           </a>
+           <a href="">
+              <iconify-icon icon="mdi:phone"></iconify-icon>
+           </a>
+        </div>
+     </div>
+     <div class="footer-footer">
+        <p>@Copyright. All Rights Reserved</p>
+        <p>Privacy Policy</p>
+     </div>
+     </footer>
         <script src="script.js"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.8/iconify-icon.min.js"></script>
 </body>
