--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Exclusively</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://api.fontshare.com/v2/css?f[]=satoshi@1&f[]=general-sans@1&display=swap" rel="stylesheet">
+   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+   <link rel="manifest" href="/site.webmanifest">
+   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffffff">
+   <meta name="msapplication-TileColor" content="#2d89ef">
+   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <div class="catch">Get your free estimate today!</div>
@@ -55,25 +62,25 @@
      <section class="services">
         <h4>Services</h4>
         <p>Explore our diverse range of comprehensive services tailored to elevate your home.</p>
-        <div class="service-boxes"><a href=""><p>Additions</p><p class="service-des">Expand your home seamlessly with our addition services, ensuring a harmonious blend with your existing architecture.</p></a><a href="">
+        <div class="service-boxes"><div><p>Additions</p><p class="service-des">Expand your home seamlessly with our addition services, ensuring a harmonious blend with your existing architecture.</p></div><div>
          <p>PAINT</p>
          <p class="service-des">Transform your home with our professional painting services: adding color, personality, and
             elegance to your living
             spaces.</p>
-      </a><a href="">
+      </div><div>
          <p>Kitchen Remodeling</p>
          <p class="service-des">Elevate your kitchen with our expert remodeling services, tailored to your unique style and needs.</p>
-      </a><a href="">
+      </div><div>
          <p>Bathroom Remodeling</p>
          <p class="service-des">Experience the ultimate in bathroom transformation with our remodeling expertise, enhancing both aesthetics and
          functionality.</p>
-      </a><a href="">
+      </div><div>
          <p>Remodeling & Renovations</p>
          <p class="service-des">Discover the art of home remodeling and renovations, where we breathe new life into your living spaces.</p>
-      </a><a href="">
+      </div><div>
          <p>Flooring</p>
          <p class="service-des">Step onto beautiful and durable flooring options, adding warmth and elegance to your home interior.</p>
-      </a></div>
+      </div></div>
      </section>
      <footer>
      <div class="footer-top">
