--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-    <div class="catch">Get your free estimate today!</div>
+    <div id="home" class="catch">Get your free estimate today!</div>
     <nav>
         <div class="estimate"><a href="">FREE ESTIMATE</a></div>
         <button class="menu">MENU</button>
         <ul id="nav-items">
         <li><button class="menu">CLOSE</button></li>
-        <li><a href="">HOME</a></li>
-        <li><a href="">ABOUT US</a></li>
-        <li><a href="">SERVICES</a></li>
-        <li><a href="">PROJECTS</a></li>
-        <li><a href="">REVIEWS</a></li>
-        <li><a href="">CONTACT US</a></li>
+        <li><a class="menu" href="#home">HOME</a></li>
+        <li><a class="menu" href="#about">ABOUT US</a></li>
+        <li><a class="menu" href="#services">SERVICES</a></li>
+        <li><a class="menu" href="">PROJECTS</a></li>
+        <li><a class="menu" href="">REVIEWS</a></li>
+        <li><a class="menu" href="">CONTACT US</a></li>
     </ul>
     </nav>
     <header><h1><span>Exclusively</span><br/>Kitchens & Bathrooms</h1><p>Your Partner for Stunning Home Renovations</p><a href="">Get Started</a></header>
@@ -46,7 +46,7 @@
             </div>
         </div>
     </section>
-    <main>
+    <main id="about">
         <div class="bio">
            <h3>A Little About Us</h3>
            <p>With over 25 years of unwavering commitment to excellence, Exclusively Kitchens and Bathrooms has been the go-to choice for creating stunning kitchen and bathroom spaces. Since our inception in [Year of Establishment], we've mastered the art of blending craftsmanship, quality, and customer satisfaction.</p>
@@ -59,7 +59,7 @@
            <img src="bonded.png" alt="">
         </div>
      </main>
-     <section class="services">
+     <section id="services" class="services">
         <h4>Services</h4>
         <p>Explore our diverse range of comprehensive services tailored to elevate your home.</p>
         <div class="service-boxes"><div><p>Additions</p><p class="service-des">Expand your home seamlessly with our addition services, ensuring a harmonious blend with your existing architecture.</p></div><div>
