--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <meta name="msapplication-TileColor" content="#2d89ef">
    <meta name="theme-color" content="#ffffff">
 </head>
-<body>
+<body ontouchstart="">
     <div id="home" class="catch">Get your free estimate today!</div>
     <nav>
         <div class="estimate"><a href="">FREE ESTIMATE</a></div>
