--- a/index.html
+++ b/index.html
@@ -188,9 +188,10 @@
                alt="headshot for client">
             <div class="name">Sarah H.</div>
          </div>
-         <p>I recently hired EKnB for a home renovation project, and I couldn't be happier. Their team was efficient,
-         skilled, and attentive to every detail. The project was completed on schedule, and the results are outstanding. I highly
-         recommend EKnB for top-notch home renovations!</p>
+         <p>I had the pleasure of working with EKnB for a home renovation, and I'm thrilled with the outcome. From the initial
+         consultation to the final touches, their team displayed unmatched professionalism and craftsmanship. They adhered to the
+         agreed-upon timeline and budget, and the quality of their work exceeded my expectations. I wholeheartedly recommend EKnB
+         for home renovations that truly make a difference!</p>
       </div>
    </section>
    <section id="contact"><form action="https://formsubmit.co/jeffsplumbingdm@gmail.com" method="POST">
