--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
          <li>Phone: (405) 520-6908</li>
          <li>Email: ExclusivelyKandb@aol.com</li>
          <li>Address: Blanchard, OK 73010-3477</li>
+         <li>Or try the form!</li>
       </ul>
    </div></div>
 </section>
