--- a/index.html
+++ b/index.html
@@ -178,21 +178,17 @@
    <section id="reviews">
       <h6>Testimonials</h6>
       <p>Hear what our clients have to say.</p>
-      <div class="review"><div class="person"><img src="https://images.unsplash.com/photo-1600486913747-55e5470d6f40?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8aGVhZHNob3R8ZW58MHwwfDB8fHww&auto=format&fit=crop&w=500&q=60" alt="headshot for client"><div class="name">Johnny P.</div></div><p>Exclusively Kitchens and Bathrooms recently renovated my home, and the results are simply amazing. From the initial consultation to the
-      final touches, they demonstrated exceptional professionalism, skill, and attention to detail. The project was completed
-      on time, and the quality of their work exceeded my expectations. I highly recommend Exclusively Kitchens and Bathrooms for any home
-      renovation project. They transformed my space into a beautiful, functional, and modern living area.</p></div>
+      <div class="review"><div class="person"><img src="https://images.unsplash.com/photo-1600486913747-55e5470d6f40?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8aGVhZHNob3R8ZW58MHwwfDB8fHww&auto=format&fit=crop&w=500&q=60" alt="headshot for client"><div class="name">Wilson A.</div></div><p>These guys are simply amazing. They are down to earth, friendly and their enthusiasm is truly infectious. Their pricing
+      is fair and they are very professional, but, what really and truly stands out most is their personable approach and
+      demeanor.</p></div>
       <div class="review">
          <div class="person">
             <img
                src="https://images.unsplash.com/photo-1573496799515-eebbb63814f2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8aGVhZHNob3R8ZW58MHwwfDB8fHww&auto=format&fit=crop&w=500&q=60"
                alt="headshot for client">
-            <div class="name">Sarah H.</div>
+            <div class="name">Brenda King</div>
          </div>
-         <p>I had the pleasure of working with EKnB for a home renovation, and I'm thrilled with the outcome. From the initial
-         consultation to the final touches, their team displayed unmatched professionalism and craftsmanship. They adhered to the
-         agreed-upon timeline and budget, and the quality of their work exceeded my expectations. I wholeheartedly recommend EKnB
-         for home renovations that truly make a difference!</p>
+         <p>Honest and reliable man to work with. Workmanship is spot on and beautiful results. So happy we found Mike and his crew.</p>
       </div>
    </section>
    <section id="contact">
