--- a/policies.html
+++ b/policies.html
@@ -4,27 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Privacy Policy</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
-    />
+    <link href="https://api.fontshare.com/v2/css?f[]=satoshi@1&f[]=general-sans@1&display=swap" rel="stylesheet">
+    <meta name="description" content="Privacy Policy for Exclusively Kitchens and Bathrooms">
+    <meta name="keywords"
+      content="Privacy Policy, Rights, Usage">
     <link rel="stylesheet" href="policies.css" />
-    <link
-      href="https://api.fontshare.com/v2/css?f[]=oswald@1&f[]=erode@1&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <h1>PRIVACY POLICY.</h1>
-    <p>Effective Date: 6/ 6/ 2023</p>
+    <p>Effective Date: 10/ 04/ 2023</p>
     <p>
-      At Jeff's Plumbing, we are committed to protecting the privacy and
+      At Exclusively KnB, we are committed to protecting the privacy and
       security of your personal information. This Privacy Policy describes how
       we collect, use, and disclose information when you interact with our
       services. Please read this Privacy Policy carefully to understand our
@@ -40,12 +30,7 @@
     <p>Use of Personal Information</p>
     <p>
       2.1 Email Communications: We will use the personal information you provide
-      to respond to your inquiries, requests, or questions sent via email. We
-      may use your email address to send you periodic updates, newsletters, or
-      other relevant communications related to our services, promotions, or
-      offers. You have the right to opt-out of receiving such communications at
-      any time by contacting us or using the "unsubscribe" link provided in the
-      emails.
+      to respond to your inquiries, requests, or questions sent via email.
     </p>
     <p>Disclosure of Personal Information</p>
     <p>
@@ -102,10 +87,10 @@
       If you have any questions, concerns, or requests regarding this Privacy
       Policy or our privacy practices, please contact us at:
     </p>
-    <p>Jeff's Plumbing</p>
-    <p>794 Partridge Ln Blanchard, OK 73010</p>
-    <p>jeffsplumbingdm@gmail.com</p>
-    <p>405-361-1682</p>
+    <p>Exclusively KnB</p>
+    <p>Blanchard, OK 73010-3477</p>
+    <p>ExclusivelyKandb@aol.com</p>
+    <p>(405) 520-6908</p>
     <p>
       By providing your personal information to us via email, you signify your
       acceptance of this Privacy Policy and consent to the collection, use, and
