--- a/index.html
+++ b/index.html
@@ -133,6 +133,20 @@
         <img src="bbb-logo.png" alt="BBB Accredited Business certification" />
         <img src="bonded.png" alt="Licensed Bonded Insured certification" />
       </div>
+      <div class="areas">
+        <p>Norman</p>
+        <p>Tuttle</p>
+        <p>Newcastle</p>
+        <p>Blanchard</p>
+        <p>Moore</p>
+        <p>SW OKC</p>
+        <p>NW OKC</p>
+        <p>Edmond</p>
+        <p>Mustang</p>
+        <p>Lindsey</p>
+        <p>Warr Acres</p>
+        <p>Bethany</p>
+      </div>
     </main>
     <section id="services" class="services">
       <h4>Services</h4>
@@ -407,7 +421,11 @@
           </ul>
         </div>
         <div class="footer-icons">
-          <a href="" target="_blank" aria-label="facebook page">
+          <a
+            href="https://www.facebook.com/profile.php?id=61550985497389"
+            target="_blank"
+            aria-label="facebook page"
+          >
             <iconify-icon icon="mdi:facebook"></iconify-icon>
           </a>
           <a
@@ -423,14 +441,10 @@
               aria-label="google maps page"
             ></iconify-icon>
           </a>
-          <a
-            href="mailto:ExclusivelyKandb@aol.com"
-            target="_blank"
-            aria-label="email"
-          >
+          <a href="mailto:ExclusivelyKandb@aol.com" aria-label="email">
             <iconify-icon icon="mdi:email"></iconify-icon>
           </a>
-          <a href="tel:(405) 520-6908" target="_blank" aria-label="phone call">
+          <a href="tel:(405) 520-6908" aria-label="phone call">
             <iconify-icon icon="mdi:phone"></iconify-icon>
           </a>
         </div>
