--- a/index.html
+++ b/index.html
@@ -129,9 +129,16 @@
         </p>
       </div>
       <div class="certifications">
-        <img src="logo.png" alt="Exclusively Kitchens and Bathrooms logo" />
-        <img src="bbb-logo.png" alt="BBB Accredited Business certification" />
-        <img src="bonded.png" alt="Licensed Bonded Insured certification" />
+        <a href="#home"
+          ><img src="logo.png" alt="Exclusively Kitchens and Bathrooms logo"
+        /></a>
+        <a
+          href="https://www.bbb.org/us/ok/blanchard/profile/bathroom-design/exclusively-kitchens-bathrooms-0995-13004268"
+          ><img src="bbb-logo.png" alt="BBB Accredited Business certification"
+        /></a>
+        <a
+          ><img src="bonded.png" alt="Licensed Bonded Insured certification"
+        /></a>
       </div>
       <div class="areas">
         <p>Norman</p>
@@ -285,11 +292,8 @@
       <p>Hear what our clients have to say.</p>
       <div class="review">
         <div class="person">
-          <img
-            src="https://images.unsplash.com/photo-1600486913747-55e5470d6f40?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8aGVhZHNob3R8ZW58MHwwfDB8fHww&auto=format&fit=crop&w=500&q=60"
-            alt="headshot for client"
-          />
-          <div class="name">Wilson A.</div>
+          <iconify-icon icon="material-symbols:account-circle"></iconify-icon>
+          <div class="name">Wilson A</div>
         </div>
         <p>
           These guys are simply amazing. They are down to earth, friendly and
@@ -300,15 +304,23 @@
       </div>
       <div class="review">
         <div class="person">
-          <img
-            src="https://images.unsplash.com/photo-1573496799515-eebbb63814f2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8aGVhZHNob3R8ZW58MHwwfDB8fHww&auto=format&fit=crop&w=500&q=60"
-            alt="headshot for client"
-          />
-          <div class="name">Brenda King</div>
+          <iconify-icon icon="material-symbols:account-circle"></iconify-icon>
+          <div class="name">Brenda K</div>
         </div>
         <p>
           Honest and reliable man to work with. Workmanship is spot on and
           beautiful results. So happy we found Mike and his crew.
+        </p>
+      </div>
+      <div class="review">
+        <div class="person">
+          <iconify-icon icon="material-symbols:account-circle"></iconify-icon>
+          <div class="name">Brent B</div>
+        </div>
+        <p>
+          I had Mike and his guys come to my house and remodel both bathrooms.
+          They did it, excellent job, very professional, would recommend them to
+          anybody wanting their bathrooms or kitchen remodeled.
         </p>
       </div>
     </section>
